--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-DB_USER=postgres
-DB_HOST=localhost
-DB_DATABASE=lia_db
-DB_PASSWORD=sua_senha_do_postgres
-DB_PORT=5432
+DATABASE_URL="postgresql://postgres:462676@localhost:5432/LIA?schema=public"
+
+JWT_SECRET="segredo-muito-forte-do-lia-app"
