feat(auth): implement JWT authentication and user registration DTO feat(auth): add roles-based access control with decorators and guards feat(books): refactor book management with DTOs and improved error handling feat(cart): enhance cart functionality with DTOs and JWT protection feat(stock): implement stock management with DTOs and service layer feat(users): create user management with DTOs and admin access control chore(prisma): add Prisma service for database interactions chore(swagger): generate OpenAPI documentation for the API chore(tsconfig): enable experimental decorators and metadata emission

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "lib": ["es2022"],
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+  "experimentalDecorators": true,
+  "emitDecoratorMetadata": true,
 
     /* Strictness: */
     "strict": true,
