--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
-DATABASE_URL="postgresql://postgres:462676@localhost:5432/LIA?schema=public"
+DB_USER=postgres
+DB_HOST=localhost
+DB_DATABASE=lia_db
+DB_PASSWORD=123456
+DB_PORT=5432
 
-JWT_SECRET="segredo-muito-forte-do-lia-app"
+
+DATABASE_URL=postgresql://postgres:123456@localhost:5432/lia_db?schema=public
+JWT_SECRET=segredo-muito-forte-do-lia-app
