--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/main.js",
-  "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules src/main.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules src/main.ts",
     "seed": "node prisma/seed.js",
-  "generate:swagger": "npm run build && node -r tsconfig-paths/register dist/swagger/generator.js",
+    "generate:swagger": "npm run build && node -r tsconfig-paths/register dist/swagger/generator.js",
     "generate:swagger:dev": "ts-node-dev -r tsconfig-paths/register --transpile-only src/swagger/generator.ts",
     "test": "jest",
     "lint": "eslint src --ext .ts",
@@ -20,6 +20,7 @@
   "description": "LIA: Marketplace de livros desenvolvido para a disciplina de Projeto Integrador. Stack: Node.js, Angular e PostgreSQL",
   "dependencies": {
     "@nestjs/common": "^10.3.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.3.0",
     "@nestjs/jwt": "^10.0.0",
     "@nestjs/passport": "^10.0.0",
@@ -33,12 +34,12 @@
     "dotenv": "^17.2.3",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mercadopago": "^2.9.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "stripe": "^12.12.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
@@ -48,6 +49,7 @@
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.6.2",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
