--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,29 @@
 
 # Arquivos de Configuração de Variáveis de Ambiente
 .env
+
+# Configuração local do npm
+.npmrc
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Cache e arquivos temporários
+.npm
+.eslintcache
+.cache/
+
+# Arquivos de upload (se houver uploads locais)
+/uploads
+
+# Arquivos de backup
+*.backup
+*.bak
+
+# OS específicos
+.DS_Store
+Thumbs.db
